<resources>
    <string name="app_name">John Coronite Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="my_title">John Coronite\'s App Portfolio</string>
    <string name="media_streamer">Spotify Streamer</string>
    <string name="super_duo1">Scores App</string>
    <string name="super_duo2">Library App</string>
    <string name="build_it">Build It Bigger</string>
    <string name="reader">XYZ Reader</string>
    <string name="capstone">Capstone: My Own App</string>
</resources>
