<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="net.coronite.johncoroniteportfolio.MainActivity"
    style="@style/AppStyle"
    >

    <TextView
        android:id="@+id/headerText"
        style="@style/TopHeader"
        />

    <Button
        android:id="@+id/content_main_btn_spotify_streamer"
        android:text="@string/media_streamer"
        android:layout_below="@+id/headerText"
        android:onClick="buttonToast"
        style="@style/ButtonStyle"
         />

    <Button
        android:id="@+id/content_main_btn_scores_app"
        android:text="@string/super_duo1"
        android:layout_below="@+id/content_main_btn_spotify_streamer"
        android:onClick="buttonToast"
        style="@style/ButtonStyle"
        />

    <Button
        android:id="@+id/content_main_btn_library_app"
        android:text="@string/super_duo2"
        android:layout_below="@+id/content_main_btn_scores_app"
        android:onClick="buttonToast"
        style="@style/ButtonStyle"
         />

    <Button
        android:id="@+id/content_main_btn_build_it_bigger"
        android:text="@string/build_it"
        android:layout_below="@+id/content_main_btn_library_app"
        android:onClick="buttonToast"
        style="@style/ButtonStyle"
         />

    <Button
        android:id="@+id/content_main_btn_xyz_reader"
        android:text="@string/reader"
        android:layout_below="@+id/content_main_btn_build_it_bigger"
        android:onClick="buttonToast"
        style="@style/ButtonStyle"
         />

    <Button
        android:id="@+id/content_main_btn_capstone_app"
        android:text="@string/capstone"
        android:layout_below="@+id/content_main_btn_xyz_reader"
        android:onClick="buttonToast"
        style="@style/ColorButtonStyle"
         />

</RelativeLayout>
